i have changed color of buttion
gdgfhjkll;

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	                        <h1 class="hero-title mt-0">Welcome to my Tic Tac Toe App</h1>
 	                        <p class="hero-paragraph">Download and install enjoy with your friend and give us feedback </p>
 	                        <div class="hero-cta">
-								<a class="button button-primary button-wide-mobile" href="https://drive.google.com/uc?export=download&id=1aLFnnSmv50upLScKg1_3PqizpmAtrnic">Download App</a>
+								<a  style="background-color:red" class="button button-primary button-wide-mobile" href="https://drive.google.com/uc?export=download&id=1aLFnnSmv50upLScKg1_3PqizpmAtrnic">Download App</a>
 							</div>
 						</div>
 						<div class="mockup-container">
